# backend/src/main/java/io/geordi/alerts/domain/AlertConditionType.java
@@ -1,0 +1,5 @@
+package io.geordi.alerts.domain;
+
+public enum AlertConditionType {
+    BURN_RATE_ABOVE
+}
